--- a/2/s09490032_hw2.ipynb
+++ b/2/s09490032_hw2.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,17 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入至少三個以上的英文單字，單字之間以空格隔開：a\n",
+      "請輸入至少三個以上的英文單字，單字之間以空格隔開：This\n",
       "輸入不正確，請重新輸入\n",
-      "請輸入至少三個以上的英文單字，單字之間以空格隔開：a b c\n",
-      "您輸入的英文單字有： a b c\n"
+      "請輸入至少三個以上的英文單字，單字之間以空格隔開：This is an apple\n",
+      "您輸入的英文單字有： This is an apple\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,6 @@
    ],
    "source": [
     "import re\n",
-    "input_str = 'This is an apple'  #輸入字串\n",
     "char_list = re.findall(r'\\D', input_str)  #使用正規表達式找出所有字元(\\D=匹配任何的非數字)\n",
     "print(char_list)"
    ]
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +167,6 @@
    ],
    "source": [
     "import re\n",
-    "input_str = 'This is an apple'\n",
     "char_list = re.findall(r'\\S', input_str)  #使用正規表達式找出所有字元(\\S=匹配任何不是空白符的字符)\n",
     "print(char_list)"
    ]
@@ -183,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +194,6 @@
    ],
    "source": [
     "import re\n",
-    "input_str = 'This is an apple'\n",
     "char_list = re.findall('\\w+', input_str)  # \\w+ : 表示不限長度的數字、字母和底線字元和連續字元[A-Za-z0-9]\n",
     "print(char_list)"
    ]
@@ -211,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +221,6 @@
    ],
    "source": [
     "import re\n",
-    "input_str = 'This is an apple'\n",
     "match_obj = re.match('^\\w+', input_str)   # ^：匹配字串的開頭。\\w+：匹配一個或多個單詞字符，包括字母、數字和底線。  \n",
     "if match_obj:\n",
     "    print([match_obj.group()])  #group()返回正規表示式匹配到的字串"
@@ -240,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +249,6 @@
    ],
    "source": [
     "import re\n",
-    "input_str = 'This is an apple'\n",
     "match_obj = re.search('\\w+$', input_str)  #正規表示法的末端放置 $ 表示字串必須出現在被搜尋字串的最後位置 \n",
     "if match_obj:\n",
     "    print([match_obj.group()])"
@@ -269,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +277,6 @@
    ],
    "source": [
     "import re\n",
-    "input_str = 'This is an apple'\n",
     "pattern = re.findall(r'\\b\\w{2}', input_str)   #\\b：匹配單詞邊界，可以避免匹配到單詞的一部分。\n",
     "                                              #\\w{2}：匹配兩個單詞字符，包括字母、數字和底線。 \n",
     "print(pattern)"
@@ -298,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +305,6 @@
    ],
    "source": [
     "import re\n",
-    "input_str = 'This is an apple'\n",
     "pattern = re.findall(r'(?i)\\b[aeiou]\\w*\\b', input_str)  #(?i)：設定正規表達式為不區分大小寫模式。\n",
     "                                                        #[aeiou]：匹配母音字元。\n",
     "                                                        #\\w*：匹配零個或多個字母、數字、底線。\n",
@@ -328,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +334,6 @@
    ],
    "source": [
     "import re\n",
-    "input_str = \"This is an apple\"\n",
     "odd_chars = re.findall(r'.{1}', input_str[0::2])  # '.{1}'，它可以匹配任意一個字元\n",
     "                                                  #找出字串中所有奇數順位的字元\n",
     "print(odd_chars)"
@@ -357,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +362,6 @@
    ],
    "source": [
     "import re\n",
-    "input_str = \"This is an apple\"\n",
     "odd_chars = re.findall(r'.{1}', input_str[1::2])  # '.{1}'，它可以匹配任意一個字元\n",
     "                                                  #找出字串中所有偶數順位的字元\n",
     "print(odd_chars)"
@@ -386,17 +377,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入至少三個以上的英文 email 位址，位址之間以空格隔開：s09490032@go.thu.edu.tw\n",
+      "請輸入至少三個以上的英文 email 位址，位址之間以空格隔開：s102356@gmail.com, cia@test.gov.us\n",
       "輸入不正確，請重新輸入\n",
-      "請輸入至少三個以上的英文 email 位址，位址之間以空格隔開：s09490032@go.thu.edu.tw s09490032@go.thu.edu.tw s09490032@go.thu.edu.tw\n",
-      "您輸入的英文 email 位址有： s09490032@go.thu.edu.tw, s09490032@go.thu.edu.tw, s09490032@go.thu.edu.tw\n"
+      "請輸入至少三個以上的英文 email 位址，位址之間以空格隔開：s102356@gmail.com cia@test.gov.us john_123@winworld.com first.test@travel.biz\n",
+      "您輸入的英文 email 位址有： s102356@gmail.com, cia@test.gov.us, john_123@winworld.com, first.test@travel.biz\n"
      ]
     }
    ],
@@ -426,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +430,6 @@
    ],
    "source": [
     "import re\n",
-    "input_str = \"s102356@gmail.com, cia@test.gov.us, john_123@winworld.com, first.test@travel.biz\"\n",
     "pattern = re.findall(r'@[a-zA-Z0-9.-]\\w+', input_str)  #截取字串中每一個 email 位址中的組織名稱\n",
     "print(pattern)"
    ]
@@ -455,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +458,6 @@
    ],
    "source": [
     "import re\n",
-    "input_str = \"s102356@gmail.com, cia@test.gov.us, john_123@winworld.com, first.test@travel.biz\"\n",
     "pattern = re.findall(r'@[a-zA-Z0-9]+\\.[a-zA-Z]{2,}', input_str)  #截取字串中每一個 email 位址中的組織名稱與網域類別\n",
     "print(pattern)"
    ]
@@ -484,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +486,6 @@
    ],
    "source": [
     "import re\n",
-    "input_str = \"s102356@gmail.com, cia@test.gov.us, john_123@winworld.com, first.test@travel.biz\"\n",
     "pattern = re.findall(r'@(\\w+\\.\\w+)', input_str)  #截取字串中每一個 email 位址中的網域類別名稱\n",
     "pattern_2 = [match.split('.')[-1] for match in pattern]\n",
     "print(pattern_2)"
@@ -514,21 +502,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['s102356', 'cia', 'john_123', 'test']\n"
+      "['s102356', 'cia', 'john_123', 'first.test']\n"
      ]
     }
    ],
    "source": [
     "import re\n",
-    "input_str = \"s102356@gmail.com, cia@test.gov.us, john_123@winworld.com, first.test@travel.biz\"\n",
-    "pattern = re.findall(r'\\w+(?=@)', input_str)  # \\w+(?=@)，它會匹配所有在 @ 符號之前的字元\n",
+    "pattern = re.findall(r'[\\w.]+(?=@)', input_str)  # [\\w.]+ 匹配字母、數字、底線和點（.），匹配到@前\n",
     "print(pattern)"
    ]
   },
@@ -542,14 +529,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "輸入日期：25-11-2002\n",
+      "輸入日期：02-54-2030\n",
       "輸入不正確，請重新輸入\n",
       "輸入日期：11-25-2002\n",
       "您輸入的日期： 11-25-2002\n"
@@ -582,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -625,9 +612,7 @@
    ],
    "source": [
     "import re\n",
-    "input_str = \"LIZ 88-1057 12-07-1998, XYZ 56-7893 12-10-2014, ABC 99-0111 05-31-2017\"\n",
     "pattern = re.findall(r'\\b(?<=\\b\\d{2}-\\d{2}-)\\d{4}\\b', input_str)  #匹配MM-DD後面的四位數\n",
-    "\n",
     "print(pattern)"
    ]
   },
@@ -668,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
