--- a/3/s09490032_hw3.ipynb
+++ b/3/s09490032_hw3.ipynb
@@ -97,11 +97,12 @@
     "with open('hw3.py', 'r', encoding='utf-8') as f:\n",
     "    contents = f.read()\n",
     "\n",
-    "# #\\n+  一個 # 配上一至多個換行符號\n",
-    "# \\n*#[#\\w\\s]+#\\n*  [#\\w\\s]+ 匹配一至多個 # 或英文字元或空白字元\n",
-    "# (?!.*#\\'*\\))\\s*#.*  匹配不包含 #之後的字元直到換行\n",
-    "#[\\\"\\']{3,}[\\w\\s]+[\\\"\\']{3,}\\s*  匹配開頭結尾有三個以上 \" 或 ' 的字元\n",
-    "pattern = r'#\\n+|\\n+#[\\w\\s#]+#\\n*|(?!.*#\\'*\\))\\s*#.*|[\\\"\\']{3,}[\\w\\s]+[\\\"\\']{3,}\\s*'\n",
+    "pattern = (\n",
+    "    r'#\\n+|'                             # 匹配單行的 # 註釋\n",
+    "    r'\\n+#[\\w\\s#]+#\\n*|'                 # 匹配多行的 # 註釋\n",
+    "    r'(?!.*#\\'*\\))\\s*#.*|'               # 排除括號中的 # 註釋\n",
+    "    r'[\\\"\\']{3,}[\\w\\s]+[\\\"\\']{3,}\\s*'    # 匹配三個或更多引號的字串\n",
+    ")\n",
     "\n",
     "code_without_comments = re.sub(pattern, \"\", contents)\n",
     "\n",
