--- a/4/s09490032_hw4.ipynb
+++ b/4/s09490032_hw4.ipynb
@@ -2,6 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0a4b1f77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###############################################################################\n",
+    "#\n",
+    "#  Name : 黃楷茵\n",
+    "#\n",
+    "#  Class : 資管三\n",
+    "#\n",
+    "#  SID : S09490032\n",
+    "#\n",
+    "#  Program Name : s09490032_hw4.ipynb\n",
+    "#\n",
+    "#  Functions :\n",
+    "#               (1). 到 【聯合新聞網】的新聞【即時列表】網頁(https://udn.com/news/breaknews/1)上，\n",
+    "#                    程式會自動蒐集擷取所有在【精選】、【要聞】、【娛樂】、【財經】、【文教】分項主題新聞網頁內的新聞標題。\n",
+    "#               (2). 本作業以 Jupyter Notebook 文件來完成。\n",
+    "#               (3). 續上述 (1) 中所提及的要求，要將所有搜尋到的即時新聞結果，以 Pandas DataFrame 的方式整理收集後呈現在 Notebook 上，\n",
+    "#                    每一個主題單獨以一個表格來呈現。\n",
+    "#                    每一個主題的即時新聞網頁網址(實際是部分網址字串)，請以正規表達式（regular expression）的技巧擷取出來，\n",
+    "#                    以防日後報社更改每一個即時新聞主題所對應的網址。\n",
+    "#\n",
+    "#  Homework : No.3\n",
+    "#\n",
+    "#  Last Modified Date : 2023/05/10\n",
+    "#\n",
+    "###############################################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "d9dffbe7",
    "metadata": {},
